--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!-- <app-hello></app-hello> -->
+  <!-- <app-typing-box></app-typing-box> -->
+  <!-- <app-age-calculator></app-age-calculator> -->
   <app-root></app-root>
 </body>
 </html>
